[package]
name = "herdmq"
version = "0.1.0"
authors = ["Warunyou Dej-Udom <warunyou_d@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6.0", features = ["codec"] }
futures-util = { version = "0.3.8", features = ["sink"] }
mqtt-codec = { git = "https://github.com/hyphent/mqtt-codec", tag = "v0.1.2" }
bytes = "1.0.1"
rand = "0.8.2"
cdrs-tokio = "2.0.0"
regex = "1"
getopts = "0.2"
uuid = { version = "0.8", features = ["v4"] }
serde_json = "1.0"
